[gd_scene load_steps=13 format=3 uid="uid://bndmad0qfy4co"]

[ext_resource type="Script" path="res://player_controller.gd" id="1_ggjex"]
[ext_resource type="Texture2D" uid="uid://c6xyecff3aem5" path="res://Zombie Apocalypse Tileset/Organized separated sprites/Player Character Walking Animation Frames/Zombie-Tileset---_0476_Capa-477.png" id="2_hmbyb"]
[ext_resource type="Texture2D" uid="uid://ciiachs16524v" path="res://sword slash.png" id="3_6ie1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muj1q"]
size = Vector2(22.535, 23.1754)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1iwq"]
atlas = ExtResource("3_6ie1n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufuwh"]
atlas = ExtResource("3_6ie1n")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5waek"]
atlas = ExtResource("3_6ie1n")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27l6m"]
atlas = ExtResource("3_6ie1n")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yago"]
atlas = ExtResource("3_6ie1n")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjaps"]
atlas = ExtResource("3_6ie1n")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_1jj63"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1iwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufuwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5waek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27l6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yago")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjaps")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="Curve2D" id="Curve2D_esht1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 138, -81, 0, 0, 0, 0, 141.074, 91.0555, 0, 0, 0, 0, -172.521, 94.0741, 0, 0, 0, 0, -169.447, -81, 0, 0, 0, 0, 138, -81)
}
point_count = 5

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sword_animation")]
script = ExtResource("1_ggjex")
sword_animation = NodePath("AnimatedSprite2D")

[node name="Attack Cooldown" type="Timer" parent="."]

[node name="Attack Delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.714286, 0.714286)
texture = ExtResource("2_hmbyb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.532505, 0.517791)
shape = SubResource("RectangleShape2D_muj1q")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
limit_left = 0
limit_top = 0
limit_right = 1250
limit_bottom = 1000
position_smoothing_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_1jj63")
offset = Vector2(12, 2)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, 1, -19, 12, -16, 21, -12, 26, -2, 26, 6, 21, 16, 14, 23, -3, 14)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(15.6406, -1.33297)
scale = Vector2(0.931135, 1.04527)
curve = SubResource("Curve2D_esht1")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-170.057, -46.2632)
rotation = -1.55324
progress = 626.04

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 9.0
offset_right = 23.0
offset_bottom = 11.0
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = 9.0
offset_right = 23.0
offset_bottom = 11.0
grow_vertical = 2
color = Color(0, 1, 0, 1)

[connection signal="timeout" from="Attack Cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Attack Delay" to="." method="_on_attack_delay_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
